--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,91 +1,34 @@
-.container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+
+.container{
+  height:100%;
+  width:100%;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
+.background{
+  background: linear-gradient(to top, var(--darkred) 1%, var(--dark) 75%);
+  z-index:-1;
+  height:100vh;
+  width:100vw;
+  position:fixed;
+  pointer-events: none;
 }
 
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
+.titleContainer{
+  width:var(--mainColumn);
+  margin:auto;
 }
 
-.title {
-  margin: 0 0 1rem;
-  line-height: 1.15;
-  font-size: 3.6rem;
-}
-
-.title {
-  text-align: center;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-
-  max-width: 800px;
-  margin-top: 3rem;
-}
-
-.card {
-  margin: 1rem;
-  flex-basis: 45%;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h3 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
+.mainTitle {
   margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+  color:var(--light);
+  text-transform: uppercase;
+  font-style: normal;
+  font-weight:Medium;
 }
 
-.logo {
-  height: 1em;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.subTitle{
+  color:var(--light);
+  font-family: 'Josefin Sans', sans-serif;
+  font-style: normal;
+  font-weight:normal;
 }
