--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,11 +1,18 @@
 
+.outerContainer{
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .container{
-  height:100%;
   width:100%;
 }
 
 .background{
-  background: linear-gradient(to top, var(--darkred) 1%, var(--dark) 75%);
+  background: linear-gradient(to top, var(--darkishred) 1%, var(--dark) 75%);
   z-index:-1;
   height:100vh;
   width:100vw;
@@ -14,8 +21,9 @@
 }
 
 .titleContainer{
-  width:var(--mainColumn);
+  width: var(--homeColumn);
   margin:auto;
+  
 }
 
 .mainTitle {
@@ -24,6 +32,8 @@
   text-transform: uppercase;
   font-style: normal;
   font-weight:Medium;
+  font-size:3em;
+  padding-top: 0;
 }
 
 .subTitle{
@@ -31,4 +41,15 @@
   font-family: 'Josefin Sans', sans-serif;
   font-style: normal;
   font-weight:normal;
+}
+
+@media (min-width: 800px) { 
+  
+  
+}
+
+@media (min-width: 1280px) { 
+  .titleContainer{
+    
+  }
 }
