--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -43,6 +43,17 @@
   font-weight:normal;
 }
 
+.footer{
+  width:100%;
+  text-align:center;
+  position:fixed;
+  bottom: 0;
+  left:0;
+  opacity:.7;
+  font-size: .9em;
+  margin-bottom:.45em;
+}
+
 @media (min-width: 800px) { 
   
   
