--- a/styles/BasicImage.module.css
+++ b/styles/BasicImage.module.css
@@ -1,15 +1,27 @@
-.imageContainer{
-  width:100%;
-  max-width:800px;
-  padding:20px;
-  border-radius:10px;
-  margin:auto;
-  
+.imageContainer {
+  width: 100%;
+  max-width: 750px;
+  border-radius: 10px;
+  margin: auto;
+  margin-top: 2em;
+  margin-bottom: 2em;
+  position: relative;
+  overflow: hidden;
+  background-color: #f0f0f0; /* Greyed out background color */
 }
 
-.image{
-  width:100%;
-  display:block;
-  border-radius:10px;
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 15px 40px 0px;
+.placeholder {
+  padding-top: 56.25%; /* 16:9 aspect ratio */
+}
+
+.image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 12px 30px 0px;
+  transition: opacity 0.5s; /* Smooth transition */
 }
