--- a/styles/ScrollOnHover.module.css
+++ b/styles/ScrollOnHover.module.css
@@ -1,7 +1,7 @@
 .container{
   cursor: pointer;
-  height: 60px;
-  width: 60px;
+  height: 50px;
+  width: 50px;
   background-color: var(--dark);
   position:absolute;
   top:50%;
@@ -11,12 +11,13 @@
   margin:1em;
   justify-content: center;
   align-items: center;
-  color:var(--light)
-
+  color:var(--light);
+  font-size:1.75em;
+  text-align: center;
 }
 
-.container:hover{
-  border: 5px solid var(--red);
+.container:hover, .container:active{
+  border: 4px solid var(--red);
   color:var(--red)
 }
 
