--- a/styles/NextContainer.module.css
+++ b/styles/NextContainer.module.css
@@ -1,9 +1,8 @@
 .container{
-  width:var(--maxTextWidth);
+  width:100%;
   max-width:var(--maxTextWidth);
   margin:auto;
   height:200px;
-  margin-top:50px;
 
   display:flex;
   flex-direction: row;
@@ -32,11 +31,12 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding:25px;
-  font-size: 1.1em;
   text-align: center;
   transition:200ms;
   cursor: pointer;
+  margin-top:15px;
+  color:inherit;
+  text-decoration: none;
 }
 
 .nextStoryContainer:hover{
@@ -46,7 +46,6 @@
 
 .nextUp{
   width:100%;
-  margin-bottom:1em;
 }
 
 .nextImageContainer{
@@ -54,11 +53,36 @@
 }
 
 .nextTitle{
-
 }
 
 .nextImage{
-  max-height: 100%;
-  max-width: 100%;
+  max-height: 90%;
+  max-width: 90%;
   border-radius: 5px;
+  margin:auto;
+  margin-top:5px;
+  margin-bottom:5px;
+}
+
+.line {
+  width: 100%;
+  max-width: var(--maxTextWidth);
+  height: 2px;
+  background-color: var(--dark);
+  position: relative;
+  margin:auto;
+  margin-top:50px;
+}
+
+.line::after {
+  content: ""; /* Empty content for the pseudo-element */
+  width: 12.5px;
+  height: 12.5px;
+  background-color: var(--dark);
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); /* Center the circle */
+  z-index: 1; /* Optional, to ensure the circle appears above the line */
 }
