--- a/styles/ActionButtons.module.css
+++ b/styles/ActionButtons.module.css
@@ -2,8 +2,12 @@
   display:flex;
   flex-direction: row;
   width:var(--homeColumn);
-  margin:auto;
+  margin-left:auto;
+  margin-right:auto;
   padding-top:20px;
+  height:10vh;
+  align-content: center;
+  flex-wrap: wrap;
 }
 
 .button{
@@ -20,6 +24,7 @@
   transition: 300ms;
   border:4px solid transparent;
   text-align: center;
+  max-height:55px;
 }
 
 .button:hover{
