--- a/styles/BasicImage.module.css
+++ b/styles/BasicImage.module.css
@@ -8,6 +8,24 @@
   position: relative;
   overflow: hidden;
   background-color: #f0f0f0; /* Greyed out background color */
+  display:none;
+}
+
+.mobileImageContainer{
+  height:60vh;
+  width:100%;
+  margin-top: 2em;
+  margin-bottom: 2em;
+  border-radius:10px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 12px 30px 0px;
+}
+
+.mobileImage{
+  height:100%;
+  width:100%;
+  background-position: center;
+  background-size: cover;
+  border-radius:10px;
 }
 
 .placeholder {
@@ -24,4 +42,15 @@
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 12px 30px 0px;
   transition: opacity 0.5s; /* Smooth transition */
+}
+
+@media (min-width: 800px) { 
+  .imageContainer{
+    display:block;
+  }
+
+  .mobileImageContainer{
+    display:none;
+  }
+  
 }
