--- a/styles/ActionButtons.module.css
+++ b/styles/ActionButtons.module.css
@@ -13,10 +13,6 @@
 .button{
   background-color:var(--offWhiteBackground);
   border-radius:10px;
-  padding:12px;
-  padding-left:15px;
-  padding-right:25px;
-  margin-right:20px;
   display:flex;
   justify-content: center;
   align-items: center;
@@ -24,14 +20,12 @@
   transition: 300ms;
   border:4px solid transparent;
   text-align: center;
-  max-height:55px;
+  height:55px;
+  width:185px;
+  justify-content: space-evenly;
 }
 
 .button:hover{
   color:var(--red);
   border:4px solid var(--red)
-}
-
-.buttonText{
-  width:100%;
 }
