--- a/styles/BasicImage.module.css
+++ b/styles/BasicImage.module.css
@@ -1,13 +1,12 @@
 .imageContainer {
-  width: 100%;
-  max-width: 750px;
+  max-width: 1000px;
   border-radius: 10px;
   margin: auto;
   margin-top: 2em;
   margin-bottom: 2em;
   position: relative;
   overflow: hidden;
-  background-color: #f0f0f0; /* Greyed out background color */
+  background-color: var(--offWhiteBackground); /* Greyed out background color */
   display:none;
 }
 
@@ -16,7 +15,6 @@
   width: 100%;
   margin-top: 2em;
   margin-bottom: 2em;
-  border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 12px 30px 0px;
   overflow: hidden;
 }
@@ -26,7 +24,6 @@
   width: 100%;
   background-position: center;
   background-size: cover;
-  border-radius: 10px;
   background-attachment: fixed; /* This creates the parallax effect */
 }
 
@@ -36,9 +33,11 @@
 
 .image {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 100%;
+  max-width:95vw;
   height: 100%;
   display: block;
   border-radius: 10px;
