--- a/styles/CarouselCard.module.css
+++ b/styles/CarouselCard.module.css
@@ -51,7 +51,7 @@
 }
 
 .title{
-  font-size:2.75em;
+  font-size:2.5em;
   font-weight:normal;
   font-style: normal;
   margin-top:initial;
@@ -61,7 +61,7 @@
 .subTitle{
   font-style: normal;
   font-weight:normal;
-  font-size:1.5em;
+  font-size:1.25em;
 }
 
 .textContainer{
@@ -121,7 +121,7 @@
     font-size:2em;
     font-weight:normal;
     font-style: normal;
-    margin-bottom:1em;
+    margin-bottom:.5em;
   }
   
   .subTitle{
