--- a/styles/globals.css
+++ b/styles/globals.css
@@ -43,6 +43,12 @@ body {
   --maxTextWidth: 675px;
 }   
 
+html, body{
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-touch-callout: none;
+  user-select: none;
+}
+
 @media (min-width: 800px) { 
   :root {
     --mainColumn: 80vw;
